--- a/.github/workflows/genJar.yml
+++ b/.github/workflows/genJar.yml
@@ -1,27 +1,27 @@
-name: Spider Jar Gen CI
-
-on: workflow_dispatch
-
 jobs:
   build:
-
-    runs-on: windows-latest
-    
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'
         cache: gradle
-        
-    - name: Build with Gradle
+        distribution: adopt
+        java-version: '11'
+    - continue-on-error: true
+      name: Build with Gradle
       run: ./buildAndGenJar.bat ec
-        
-    - name: Update spider jar
+    - continue-on-error: true
+      name: Update spider jar
       uses: EndBug/add-and-commit@v7
       with:
+        add: '[''./jar/custom_spider.jar'', ''./jar/custom_spider.jar.md5'']'
         default_author: github_actions
-        message: 'update spider jar'
-        add: "['./jar/custom_spider.jar', './jar/custom_spider.jar.md5']"
+        message: update spider jar
+name: Spider Jar Gen CI
+on:
+  repository_dispatch:
+    types: trigger-ga___genJar.yml
